test/core/table_init.wast
;;
;; Generated by ../meta/generate_table_init.js
;;

(module
  (func (export "ef0") (result i32) (i32.const 0))
  (func (export "ef1") (result i32) (i32.const 1))
  (func (export "ef2") (result i32) (i32.const 2))
  (func (export "ef3") (result i32) (i32.const 3))
  (func (export "ef4") (result i32) (i32.const 4))
)
(register "a")


(module
  (type (func (result i32)))  ;; type #0
  (import "a" "ef0" (func (result i32)))    ;; index 0
  (import "a" "ef1" (func (result i32)))
  (import "a" "ef2" (func (result i32)))
  (import "a" "ef3" (func (result i32)))
  (import "a" "ef4" (func (result i32)))    ;; index 4
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 5))  ;; index 5
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))  ;; index 9
  (func (export "testfn") (param i32) (result i32)
    (table.init 1 (i32.const 7) (i32.const 0) (i32.const 4))
    (call_indirect (type 0) (local.get 0))
))

(assert_trap (invoke "testfn" (i32.const 0)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 1)) "uninitialized element")
(assert_return (invoke "testfn" (i32.const 2)) (i32.const 3))
(assert_return (invoke "testfn" (i32.const 3)) (i32.const 1))
(assert_return (invoke "testfn" (i32.const 4)) (i32.const 4))
(assert_return (invoke "testfn" (i32.const 5)) (i32.const 1))
(assert_trap (invoke "testfn" (i32.const 6)) "uninitialized element")
(assert_return (invoke "testfn" (i32.const 7)) (i32.const 2))
(assert_return (invoke "testfn" (i32.const 8)) (i32.const 7))
(assert_return (invoke "testfn" (i32.const 9)) (i32.const 1))
(assert_return (invoke "testfn" (i32.const 10)) (i32.const 8))
(assert_trap (invoke "testfn" (i32.const 11)) "uninitialized element")
(assert_return (invoke "testfn" (i32.const 12)) (i32.const 7))
(assert_return (invoke "testfn" (i32.const 13)) (i32.const 5))
(assert_return (invoke "testfn" (i32.const 14)) (i32.const 2))
(assert_return (invoke "testfn" (i32.const 15)) (i32.const 3))
(assert_return (invoke "testfn" (i32.const 16)) (i32.const 6))
(assert_trap (invoke "testfn" (i32.const 17)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 18)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 19)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 20)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 21)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 22)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 23)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 24)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 25)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 26)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 27)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 28)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 29)) "uninitialized element")

(module
  (type (func (result i32)))  ;; type #0
  (import "a" "ef0" (func (result i32)))    ;; index 0
  (import "a" "ef1" (func (result i32)))
  (import "a" "ef2" (func (result i32)))
  (import "a" "ef3" (func (result i32)))
  (import "a" "ef4" (func (result i32)))    ;; index 4
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 5))  ;; index 5
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))  ;; index 9
  (func (export "testfn") (param i32) (result i32)
    (table.init 3 (i32.const 15) (i32.const 1) (i32.const 3))
    (call_indirect (type 0) (local.get 0))
))

(assert_trap (invoke "testfn" (i32.const 0)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 1)) "uninitialized element")
(assert_return (invoke "testfn" (i32.const 2)) (i32.const 3))
(assert_return (invoke "testfn" (i32.const 3)) (i32.const 1))
(assert_return (invoke "testfn" (i32.const 4)) (i32.const 4))
(assert_return (invoke "testfn" (i32.const 5)) (i32.const 1))
(assert_trap (invoke "testfn" (i32.const 6)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 7)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 8)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 9)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 10)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 11)) "uninitialized element")
(assert_return (invoke "testfn" (i32.const 12)) (i32.const 7))
(assert_return (invoke "testfn" (i32.const 13)) (i32.const 5))
(assert_return (invoke "testfn" (i32.const 14)) (i32.const 2))
(assert_return (invoke "testfn" (i32.const 15)) (i32.const 9))
(assert_return (invoke "testfn" (i32.const 16)) (i32.const 2))
(assert_return (invoke "testfn" (i32.const 17)) (i32.const 7))
(assert_trap (invoke "testfn" (i32.const 18)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 19)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 20)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 21)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 22)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 23)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 24)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 25)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 26)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 27)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 28)) "uninitialized element")
(assert_trap (invoke "testfn" (i32.const 29)) "uninitialized element")
(assert_invalid
  (module
    (func (export "test")
      (elem.drop 0)))
  "unknown table 0")

(assert_invalid
  (module
    (func (export "test")
      (table.init 0 (i32.const 12) (i32.const 1) (i32.const 1))))
  "unknown table 0")


(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    elem.drop 2
    ))

(assert_trap (invoke "test") "elements segment dropped")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    (table.init 2 (i32.const 12) (i32.const 1) (i32.const 1))
    ))

(assert_trap (invoke "test") "elements segment dropped")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    (table.init 1 (i32.const 12) (i32.const 1) (i32.const 1))
    (table.init 1 (i32.const 21) (i32.const 1) (i32.const 1))))

(invoke "test")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    elem.drop 1
    elem.drop 1))

(assert_trap (invoke "test") "elements segment dropped")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    elem.drop 1
    (table.init 1 (i32.const 12) (i32.const 1) (i32.const 1))))

(assert_trap (invoke "test") "elements segment dropped")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    
    (table.init 1 (i32.const 12) (i32.const 0) (i32.const 5))))

(assert_trap (invoke "test") "out of bounds")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    
    (table.init 1 (i32.const 12) (i32.const 2) (i32.const 3))))

(assert_trap (invoke "test") "out of bounds")

(module
  (table 30 30 funcref)
  (elem (i32.const 2) 3 1 4 1)
  (elem passive 2 7 1 8)
  (elem (i32.const 12) 7 5 2 3 6)
  (elem passive 5 9 2 7 6)
  (func (result i32) (i32.const 0))
  (func (result i32) (i32.const 1))
  (func (result i32) (i32.const 2))
  (func (result i32) (i32.const 3))
  (func (result i32) (i32.const 4))
  (func (result i32) (i32.const 5))
  (func (result i32) (i32.const 6))
  (func (result i32) (i32.const 7))
  (func (result i32) (i32.const 8))
  (func (result i32) (i32.const 9))
  (func (export "test")
    
    (table.init 1 (i32.const 28) (i32.const 1) (i32.const 3))))

(assert_trap (invoke "test") "out of bounds")
(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (i64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i32.const 1) (f64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (i64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f32.const 1) (f64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (i64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (i64.const 1) (f64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f32.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f32.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f32.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f32.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (i64.const 1) (f64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f64.const 1) (i32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f64.const 1) (f32.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f64.const 1) (i64.const 1))))
   "type mismatch")

(assert_invalid
   (module
     (table 10 funcref)
     (elem passive $f0 $f0 $f0)
     (func $f0)
     (func (export "test")
       (table.init 0 (f64.const 1) (f64.const 1) (f64.const 1))))
   "type mismatch")

